# finalmouse-cli

./: 99-finalmouse.rules  CMakeLists.txt  PKGBUILD  README.md  finalmouse-cli.install  finalmouse.hpp  main.cpp
